--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <a href="#price">игрушки</a>
                 <a href="#delivery">сюжет</a>
                 <a href="#wholesale">книгии</a>
-                <a href="#about_us">FNAF</a>
+                <a href="https://kiryabelik.github.io/XZ-/">UNDERTALE </a>
             </nav>
             <h1><i></i></h1>
             <img src="https://www.meme-arsenal.com/memes/e5804577804d9600444f99610d38cccd.jpg" width="850px"/>
